apps/pez-forms/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pez-forms
  labels:
    istio.io/dataplane-mode: ambient
