apps/pez-forms/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pez-forms
  namespace: pez-forms
spec:
  parentRefs:
    - name: shared-gateway
      namespace: istio-system
  hostnames:
    - forms.lon.pez.sh
  rules:
    - backendRefs:
        - name: pez-forms
          port: 8080
